--- a/energykids/public/style.css
+++ b/energykids/public/style.css
@@ -4,22 +4,22 @@ body {
     color: rgba(255, 255, 255, 0.87);
     background-color: #000000;
 }
-  @MightySouly-lxggD {
-        font-family: font1;
+  @font-face {
+        font-family: MightySouly-lxggD;
         src: url('Fonts/MightySouly-lxggD.ttf');
         font-weight:400;
         font-weight:normal;
       }
 
-  @Monaco {
-        font-family: font1;
+  @font-face {
+        font-family: Monaco;
         src: url('Fonts/Monaco.ttf');
         font-weight:400;
         font-weight:normal;
       }
 
-  @Mshtakan {
-        font-family: font1;
+  @font-face {
+        font-family: Mshtakan;
         src: url('Fonts/Mshtakan.ttc');
         font-weight:400;
         font-weight:normal;
